--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "jsbarcode": "^3.11.3",
     "vue": "^2.5.2",
     "vue-gemini-scrollbar": "^2.0.1",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-i18n": "^8.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
